# lensstudio-cli

./: .gitignore  HARNESS.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
cli_anything/lens_studio/: __init__.py  cli.py  exceptions.py
cli_anything/lens_studio/agent/: __init__.py  capabilities.py  executor.py  planner.py  prompts.py
cli_anything/lens_studio/bridge/: __init__.py  client.py  installer.py  protocol.py
cli_anything/lens_studio/commands/: asset_cmd.py  auto_cmd.py  bridge_cmd.py  component_cmd.py  lens_cmd.py  material_cmd.py  project_cmd.py  scene_cmd.py  script_cmd.py  template_cmd.py
cli_anything/lens_studio/core/: asset.py  component.py  lens.py  material.py  project.py  scene.py  script.py  template.py
cli_anything/lens_studio/gui/: __init__.py  accessibility.py  actions.py  lens_studio_app.py  selectors.py
cli_anything/lens_studio/utils/: backend.py  config.py  formatter.py  logging.py  repl_skin.py  validation.py
dashboard/: server.py
ls_bridge_plugin/: bridge.js  module.json
tests/: conftest.py  test_agent_executor.py  test_agent_planner.py  test_asset.py  test_auto_cmd.py  test_bridge_client.py  test_bridge_cmd.py  test_bridge_protocol.py  test_cli.py  test_component.py  test_gui_actions.py  test_lens.py  test_material.py  test_project.py  test_scene.py  test_script.py  test_validation.py
