[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-anything-lens-studio"
version = "1.0.0"
description = "CLI-Anything Lens Studio: Agent-native CLI for Snap Lens Studio"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "CLI-Anything Contributors"}
]
keywords = ["lens-studio", "snapchat", "ar", "cli", "agent", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
cli-anything-lens-studio = "cli_anything.lens_studio.cli:main"
ls-cli = "cli_anything.lens_studio.cli:main"

[project.urls]
Homepage = "https://github.com/HKUDS/CLI-Anything"
Repository = "https://github.com/HKUDS/CLI-Anything"

[tool.setuptools.packages.find]
include = ["cli_anything*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
