[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-anything-lens-studio"
version = "1.0.0"
description = "CLI-Anything Lens Studio: Agent-native CLI for Snap Lens Studio"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "CLI-Anything Contributors"}
]
keywords = ["lens-studio", "snapchat", "ar", "cli", "agent", "ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.4.0",
    "pytest-cov>=4.0",
]
gui = [
    "pyobjc-core>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=12.0; sys_platform == 'darwin'",
    "pyobjc-framework-ApplicationServices>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
]
agent = [
    "anthropic>=0.40.0",
]
all = [
    "cli-anything-lens-studio[gui,agent]",
]

[project.scripts]
cli-anything-lens-studio = "cli_anything.lens_studio.cli:main"
ls-cli = "cli_anything.lens_studio.cli:main"

[project.urls]
Homepage = "https://github.com/HKUDS/CLI-Anything"
Repository = "https://github.com/HKUDS/CLI-Anything"

[tool.setuptools.packages.find]
include = ["cli_anything*", "ls_bridge_plugin*"]

[tool.setuptools.package-data]
ls_bridge_plugin = ["*.js", "*.json", "commands/*.js"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PT"]

[tool.ruff.lint.per-file-ignores]
# String literals containing Lens Studio script templates exceed line length
"cli_anything/lens_studio/core/script.py" = ["E501"]
# REPL banner art exceeds line length
"cli_anything/lens_studio/utils/repl_skin.py" = ["E501"]
# GUI module uses subprocess for macOS automation and PyObjC imports
"cli_anything/lens_studio/gui/*.py" = ["S603", "S607", "N806"]
# Agent prompts contain long strings
"cli_anything/lens_studio/agent/prompts.py" = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = false

[[tool.mypy.overrides]]
module = [
    "cli_anything.lens_studio.utils.formatter",
    "cli_anything.lens_studio.core.component",
    "cli_anything.lens_studio.core.material",
    "cli_anything.lens_studio.core.scene",
    "cli_anything.lens_studio.core.template",
]
disable_error_code = ["arg-type", "attr-defined", "var-annotated", "assignment"]

[[tool.mypy.overrides]]
module = [
    "ApplicationServices",
    "Cocoa",
    "Quartz",
    "anthropic",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["cli_anything"]

[tool.coverage.report]
fail_under = 60
show_missing = true
